<resources>
    <string name="app_name" translatable="false">Football Companion</string>
    <string name="main_home">Matches</string>
    <string name="main_news">News</string>
    <string name="main_settings">Settings</string>
    <string name="news_header">News</string>
    <string name="home_header">Matches</string>
    <string name="match_statistics_header">Statistics</string>
    <string name="matches_button_live">Live</string>
    <string name="matches_button_ended">Ended</string>
    <string name="matches_button_upcoming">Upcoming</string>
    <string name="matches_button_all">All</string>
    <string name="auth_login">Login</string>
    <string name="auth_email">Email</string>
    <string name="auth_password">Password</string>
    <string name="auth_register">Register</string>
    <string name="auth_name">Name</string>
    <string name="auth_click_login">Click to login</string>
    <string name="auth_click_register">Click to register</string>
    <string name="real_app_name">Football Companion</string>
    <string name="main_profile">Profile</string>
    <string name="profile_add_search_terms">Add search terms</string>
    <string name="profile_logout">Logout</string>
    <string name="profile_update_profile">Update profile</string>
    <string name="profile_search_terms">Search terms</string>
    <string name="profile_term">Term</string>
    <string name="profile_add_term">Add term</string>
    <string name="profile_remove_term">Remove term</string>
    <string name="profile_term_helper">Feel free to add names of teams and leagues you want to follow</string>
    <string name="profile_terms">Terms:</string>
    <string name="profile_gradient_desc" translatable="false">Gradient</string>
    <string name="profile_english_button_desc" translatable="false">English button</string>
    <string name="profile_serbian_button_desc" translatable="false">Serbian button</string>
    <string name="profile_blank_profile_picture_desc" translatable="false">Blank profile picture</string>
    <string name="back_button" translatable="false">Back button</string>
    <string name="calendar_button" translatable="false">Calendar</string>
    <string name="football_companion_logo_desc" translatable="false">Football Companion Logo</string>
    <string name="league_title_placeholder" translatable="false">League title</string>
    <string name="home_team_logo_placeholder" translatable="false">M</string>
    <string name="away_team_logo_placeholder" translatable="false">L</string>
    <string name="score_placeholder" translatable="false">2 - 1</string>
    <string name="home_team_placeholder" translatable="false">Manchester City</string>
    <string name="away_team_placeholder" translatable="false">Liverpool</string>
    <string name="date_placeholder" translatable="false">09/12/2024 08:00:00</string>
    <string name="status_placeholder" translatable="false">Finished</string>
    <string name="statistics_placeholder" translatable="false">Possession</string>
    <string name="statistics_percent_home_placeholder" translatable="false">55%</string>
    <string name="statistics_percent_away_placeholder" translatable="false">45%</string>
    <string name="required_field">Required field</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="post_notification_permission">Football Companion requires POST_NOTIFICATIONS permission to send you notifications for upcoming matches.</string>
    <string name="permission_required">Permission required</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="registration_successful">Registration successful</string>
    <string name="error_please_try_again">Error, please try again</string>
    <string name="statistics_unavailable_for_current_match">Statistics unavailable for current match</string>
    <string name="ball_possession">Ball possession</string>
    <string name="total_shots">Total shots</string>
    <string name="corner_kicks">Corner kicks</string>
    <string name="fouls">Fouls</string>
    <string name="passes">Passes</string>
    <string name="yellow_cards">Yellow cards</string>
    <string name="red_cards">Red cards</string>
    <string name="offsides">Offsides</string>
    <string name="shots_on_target">Shots on target</string>
    <string name="date_picker">Select date you wish to see matches for:</string>
    <string name="matches_unavailable_for_selected_date">Matches unavailable for selected date</string>
    <string name="match_has_been_canceled_or_postponed">Match has been canceled or postponed</string>
    <string name="statistics_are_available_for_finished_matches">Statistics are available for finished matches</string>
    <string name="match_has_already_started">Match has already started!</string>
    <string name="match_is_starting_in">"Match is starting in "</string>
    <string name="match_is_starting_in_part2">" minutes!"</string>
    <string name="notification_set_successfully">Notification set successfully</string>
    <string name="select_the_time_you_would_like_to_receive_a_notification">Select the time you would like to receive a notification:</string>
    <string name="notification_can_t_be_set_in_past">Notification can\'t be set in past</string>
    <string name="news_are_currently_unavailable">News are currently unavailable</string>
    <string name="match_notification_default">Match notification</string>
    <string name="match_notification_message_default">Match is starting soon!</string>
    <string name="reopen_app_to_see_changes">Reopen app to see changes</string>
    <string name="update_successful">Update successful</string>
    <string name="term_already_added">Term already added</string>
    <string name="article_image" translatable="false">article image</string>
    <string name="matches_and_news">Matches and News</string>
    <string name="find_stadium">Find stadium</string>
    <string name="stadium"> stadium</string>
    <string name="calculate_the_distance_not">Error while calculating the distance</string>
    <string name="calculate_the_distance">Distance between you and the stadium is</string>
    <string name="matches_unavailable_for_specified_terms">There are no matches containing specified terms</string>
    <string name="user_location">Your location</string>
    <string name="permission_denied_notifications">Permission denied, notifications can\'t be set</string>
    <string name="permission_granted_notifications">Permission granted, try setting notifications again</string>
</resources>