<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/test_background"
    android:padding="25dp"
    tools:context=".authentication.RegisterActivity">

    <TextView
        android:textColor="@color/black"
        android:textSize="50sp"
        android:textStyle="bold"
        android:fontFamily="casual"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/real_app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageView
        android:contentDescription="@string/football_companion_logo_desc"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:tint="@color/winner"
        app:srcCompat="@drawable/baseline_sports_soccer_24" />

    <TextView
        android:textColor="@color/black"
        android:fontFamily="monospace"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/auth_register" />

    <EditText
        android:autofillHints="name"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/auth_register_name"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/auth_name"
        android:textColor="@color/black"
        android:textColorHint="@color/dark_gray"
        android:fontFamily="monospace"
        android:textSize="18sp"
        android:background="@drawable/rounded_textfield"
        android:padding="18dp"
        android:inputType="text" />

    <EditText
        android:autofillHints="emailAddress"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/auth_register_email"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/auth_email"
        android:textColor="@color/black"
        android:textColorHint="@color/dark_gray"
        android:fontFamily="monospace"
        android:textSize="18sp"
        android:background="@drawable/rounded_textfield"
        android:padding="18dp"
        android:inputType="textEmailAddress" />

    <EditText
        android:autofillHints="password"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/auth_register_password"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/auth_password"
        android:textColor="@color/black"
        android:textColorHint="@color/dark_gray"
        android:fontFamily="monospace"
        android:textSize="18sp"
        android:background="@drawable/rounded_textfield"
        android:padding="18dp"
        android:inputType="textPassword" />

    <ProgressBar
        android:id="@+id/auth_register_progress_bar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:textColor="@color/white"
        android:textSize="15sp"
        android:backgroundTint="@color/button"
        android:textStyle="bold"
        android:fontFamily="monospace"
        android:layout_marginTop="10dp"
        android:text="@string/auth_register"
        android:id="@+id/auth_register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:textColor="@color/black"
        android:id="@+id/auth_register_click_login"
        android:fontFamily="monospace"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/auth_click_login" />

</LinearLayout>