<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    android:elevation="4dp"
    app:cardBackgroundColor="@color/card_background_2">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:fontFamily="monospace"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:id="@+id/match_league_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/league_title_placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:background="@color/winner"
            android:fontFamily="sans-serif"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="32sp"
            android:textColor="@color/white"
            android:id="@+id/match_home_team_logo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:layout_marginStart="35dp"
            app:layout_constraintTop_toBottomOf="@id/match_league_title"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/home_team_logo_placeholder" />

        <TextView
            android:background="@color/loser"
            android:fontFamily="sans-serif"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="32sp"
            android:textColor="@color/white"
            android:id="@+id/match_away_team_logo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:layout_marginEnd="35dp"
            app:layout_constraintTop_toBottomOf="@id/match_league_title"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/away_team_logo_placeholder"/>

        <TextView
            android:fontFamily="monospace"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="30sp"
            android:id="@+id/match_score"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintStart_toEndOf="@id/match_home_team_logo"
            app:layout_constraintEnd_toStartOf="@id/match_away_team_logo"
            app:layout_constraintTop_toBottomOf="@id/match_league_title"
            android:text="@string/score_placeholder" />

        <TextView
            android:fontFamily="monospace"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_marginStart="10dp"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:id="@+id/match_home_team_name"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/match_home_team_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/home_team_placeholder" />

        <TextView
            android:fontFamily="monospace"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="10dp"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:id="@+id/match_away_team_name"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/match_away_team_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/away_team_placeholder" />

        <TextView
            android:fontFamily="monospace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/match_time"
            android:textColor="@color/dark_gray"
            android:textSize="11sp"
            android:gravity="center"
            android:text="@string/date_placeholder"
            android:layout_marginBottom="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/match_home_team_name"
            app:layout_constraintEnd_toStartOf="@id/match_away_team_name"
            app:layout_constraintTop_toBottomOf="@id/match_score"/>

        <TextView
            android:fontFamily="monospace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/match_status"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:gravity="center"
            android:text="@string/status_placeholder"
            android:layout_marginBottom="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/match_home_team_name"
            app:layout_constraintEnd_toStartOf="@id/match_away_team_name"
            app:layout_constraintTop_toBottomOf="@id/match_time"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>