<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".profile.SearchInterestsActivity">

    <TextView
        android:id="@+id/profile_interests_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_color"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/profile_search_terms"
        android:textColor="@color/black"
        android:textSize="40sp" />

    <ImageButton
        android:id="@+id/profile_interests_back_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:background="@null"
        android:contentDescription="@string/back_button"
        app:srcCompat="@drawable/baseline_arrow_back_24" />

    <TextView
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/profile_interests_title"
        android:id="@+id/profile_interests_helper_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/profile_term_helper"
        android:textColor="@color/black"
        android:textSize="17sp" />

    <EditText
        android:autofillHints="name"
        android:layout_below="@+id/profile_interests_helper_text"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/profile_interests_text"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/profile_term"
        android:textColor="@color/black"
        android:textColorHint="@color/dark_gray"
        android:fontFamily="monospace"
        android:textSize="18sp"
        android:background="@drawable/rounded_textfield"
        android:padding="18dp"
        android:inputType="text" />

    <Button
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/profile_interests_text"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:backgroundTint="@color/button"
        android:textStyle="bold"
        android:fontFamily="monospace"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginTop="20dp"
        android:text="@string/profile_add_term"
        android:id="@+id/profile_interests_button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/profile_interests_button_add"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:backgroundTint="@color/button"
        android:textStyle="bold"
        android:fontFamily="monospace"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginTop="10dp"
        android:text="@string/profile_remove_term"
        android:id="@+id/profile_interests_button_remove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/profile_interests_button_remove"
        android:id="@+id/profile_interests_terms_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/profile_terms"
        android:textColor="@color/black"
        android:textSize="17sp" />

    <TextView
        android:background="@color/card_background"
        android:padding="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/profile_interests_terms_text"
        android:id="@+id/profile_interests_terms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:textColor="@color/black"
        android:textSize="20sp" />

</RelativeLayout>