<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".matches.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@color/main_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:layout_marginStart="5dp"
            android:gravity="start"
            android:id="@+id/home_calendar"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:contentDescription="@string/calendar_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/baseline_calendar_month_24" />

        <TextView
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/home_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@color/main_color"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center"
            android:text="@string/home_header"
            android:textColor="@color/black"
            android:textSize="40sp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        app:indicatorColor="@color/loser"
        app:trackColor="@color/card_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:id="@+id/home_progress_infinite_bar" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:id="@+id/home_buttons">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <SearchView
                android:theme="@style/SearchViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:queryHint="Search matches"
                android:layout_gravity="center"
                android:id="@+id/home_search_view" />

            <Button
                android:textStyle="bold"
                android:fontFamily="monospace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/home_button_live"
                android:text="@string/matches_button_live"
                android:layout_margin="4dp"
                android:backgroundTint="@color/button"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <Button
                android:textStyle="bold"
                android:fontFamily="monospace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/home_button_ended"
                android:text="@string/matches_button_ended"
                android:layout_margin="4dp"
                android:backgroundTint="@color/button"
                android:textColor="@color/white"
                android:textSize="15sp"/>

            <Button
                android:textStyle="bold"
                android:fontFamily="monospace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/home_button_upcoming"
                android:text="@string/matches_button_upcoming"
                android:layout_margin="4dp"
                android:backgroundTint="@color/button"
                android:textColor="@color/white"
                android:textSize="15sp"/>

            <Button
                android:textStyle="bold"
                android:fontFamily="monospace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/home_button_all"
                android:text="@string/matches_button_all"
                android:layout_margin="4dp"
                android:backgroundTint="@color/button"
                android:textColor="@color/white"
                android:textSize="15sp"/>

        </LinearLayout>

    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/home_recycler_view"/>

</LinearLayout>